# BioRGM

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
config/: config_augmentation.yml  config_finetune.yml  config_finetune_single.yml  config_pretrain.yml  config_pretrain_single.yml  environment.yml  environment_macos.yml  logging.conf  pretrain.py  reactions.py
notebooks/: 01_data_exploration.ipynb  02_repra_analysis.ipynb  03_finetune_analysis.ipynb
src/: augmentation.py  data.py  finetune.py  model.py  pretrain.py  repra.py  utils.py
src/analysis/: repra.py  repra_v2.py
src/augmentations/: augmentation.py
src/biorgm/: augmentation.py  data.py  finetune.py  model.py  pretrain.py  repra.py  utils.py
src/data/: data.py
src/models/: finetune.py  model.py  pretrain.py
tests/: test_finetune.py  test_pretrain.py  test_repra.py
