[project]
name = "biorgm"
version = "0.1.0"
description = "BioRGM"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "jupyter==1.1.1",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pytorch-metric-learning==2.9.0",
    "pyyaml==6.0.3",
    "torch==2.8.0",
    "torch-geometric==2.7.0",
    "torchinfo==1.8.0",
    "tqdm==4.67.1",
    "rdkit==2025.9.1",
    "rdkit-stubs==0.8",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "wandb==0.23.0",
]

[project.scripts]
biorgm-augment = "biorgm.augmentation:main"
biorgm-pretrain = "biorgm.pretrain:main"
biorgm-finetune = "biorgm.finetune:main"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "C", "N", "I"]
# F401: Module imported but unused;
# F403: unable to detect undefined names
ignore = ["F401", "F403"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.pylance]
typeCheckingMode = "basic"
